--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nous decouvrons ici les premier balise">
     <title>Les balises HTML</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    les balises 
+    <section><h1> Samuel Payet Designer & Developpeur Web</h1>
+    <img src="/img/1600w-YTfEMXMuMCs.webp" alt="photo de Samuel Payet" width="300px">
+    <h2>Coordonnées</h2>
+    <p>Je suis disponible de suite, contactez-moi</p>
+    <address>
+         <a href="#">974samuelpayet@gmail.com</a>
+         <br>
+         <a href="tel:+33625601630">+33(0)25601630</a>
+    </address>
+</section>
+   <section><h2>Expériences professionnelles</h2>
+    <ul>
+        <li>
+            <h3>Formateur chez<span class="red"> WebForce3</span></h3>
+            <p>Depuis 2020</p>
+        </li>
+        <li>Deux</li>
+        <li>trois</li>
+        <li>quatre</li>
+    </ul>
+</section> 
+    
 </body> 
 </html>
