--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- -->
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,29 +9,38 @@
     <meta name="description" content="Nous decouvrons ici les premier balise">
     <title>Les balises HTML</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
 <body>
-    <section><h1> Samuel Payet Designer & Developpeur Web</h1>
-    <img src="/img/1600w-YTfEMXMuMCs.webp" alt="photo de Samuel Payet" width="300px">
-    <h2>Coordonnées</h2>
-    <p>Je suis disponible de suite, contactez-moi</p>
-    <address>
-         <a href="#">974samuelpayet@gmail.com</a>
-         <br>
-         <a href="tel:+33625601630">+33(0)25601630</a>
-    </address>
-</section>
-   <section><h2>Expériences professionnelles</h2>
-    <ul>
-        <li>
-            <h3>Formateur chez<span class="red"> WebForce3</span></h3>
-            <p>Depuis 2020</p>
-        </li>
-        <li>Deux</li>
-        <li>trois</li>
-        <li>quatre</li>
-    </ul>
-</section> 
-    
-</body> 
+    <section>
+        <h1> Samuel Payet Designer & Developpeur Web</h1>
+        <img src="/img/1600w-YTfEMXMuMCs.webp" alt="photo de Samuel Payet" width="300px">
+        <p>
+            <a href="/contact.html">contactez-moi</a><i class="fa-solid fa-house"></i>
+            <a href="/portfolio.html">Decouvrez ma créations</a>
+        </p>
+        <h2>Coordonnées</h2>
+        <p>Je suis disponible de suite, contactez-moi</p>
+        <address>
+            <a href="#">974samuelpayet@gmail.com</a>
+            <br>
+            <a href="tel:+33625601630">+33(0)25601630</a>
+        </address>
+    </section>
+    <section>
+        <h2>Expériences professionnelles</h2>
+        <ul>
+            <li>
+                <h3>Formateur chez<span class="red">
+                        <a href="https://www.wf3.fr" target="_blank">WebForce3</a> </span></h3>
+                <p>Depuis 2020</p>
+            </li>
+            <li>un</li>
+            <li>trois</li>
+            <li>quatre</li>
+        </ul>
+    </section>
+
+</body>
+
 </html>
